--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "isha-rte-renderer",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "Rich text renderer for ISHA internal projects",
   "scripts": {
     "rollup": "rollup -c"
@@ -29,14 +29,9 @@
     "typescript": "^4.5.2"
   },
   "peerDependencies": {
-    "mux.js": "^6.0.0",
-    "react": "^17.0.2",
-    "react-device-detect": "^2.1.2",
-    "screenfull": "^6.0.0",
-    "shaka-player": "https://bitbucket.org/thomas_kinder/shaka-player.git#isha-3.1.1-0"
+    "react": "^17.0.2"
   },
   "dependencies": {
-    "buffer": "^6.0.3",
     "editorjs-react-renderer": "^3.0.1",
     "html-react-parser": "^1.4.2"
   },
